# ffmpeg-io

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
ffmpeg-io/: common.h  player.h  reader.h  writer.h
include/: cmd.h  ffmpeg-io
src/: cmd.c  common.c  main.c  player.c  probe.c  reader.c  writer.c
